fix: layout shift fix

--- a/src/pages/IndexPage/IndexPage.css
+++ b/src/pages/IndexPage/IndexPage.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
 
-    min-height: 264px;
+    min-height: 200px;
 }
 
 .bg-container img {
